--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ body{
     background-color: #06327d;
     font-size: 1.125rem;
     line-height: 1.5;
+    /* margin: 0; */
 }
 
 main{
@@ -199,4 +200,10 @@ grid-template-columns: 1fr 1fr
         align-items: flex-end;
     }
     
+}
+
+ @media (max-width: 949px){
+    body{
+    margin:0;
+}
 }
